# haunted-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: config.py  database.py  main.py
app/models/: models.py
app/routers/: events.py  locations.py  stats.py
app/schemas/: schemas.py
app/services/: classifier.py  heatmap.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
tests/: test_classifier.py
