[project]
name = "haunted-api"
version = "0.4.2"
description = "REST API for cataloging and classifying paranormal events"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.48",
    "aiosqlite==0.20.0",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "aiofiles==24.1.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "ruff==0.7.4",
    "mypy==1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true
